fix columns data alignment

--- a/public/themes/original/scss/_common.scss
+++ b/public/themes/original/scss/_common.scss
@@ -1434,6 +1434,8 @@ input#auto_increment_opt {
 .pma_table {
   td {
     position: static;
+    /* rtl:ignore */
+    text-align: left !important;
   }
 
   tbody td span {
@@ -1442,6 +1444,15 @@ input#auto_increment_opt {
 
     code span {
       display: inline;
+    }
+  }
+
+  th.draggable {
+    /* rtl:ignore */
+    text-align: left;
+    span {
+      /* rtl:ignore */
+      margin-right: 10px;
     }
   }
 }
